<resources>
    <string name="app_name">Zvent</string>
    <string name="start">Iniciar</string>
    <string name="about">Acerca de</string>
    <string name="home">Inicio</string>
    <string name="confirm">Check</string>
    <string name="dont">Clear</string>
    <string name="restart">Reiniciar</string>
    <string name="viewGuests">Ver invitados</string>
    <string name="invited">Invitados: </string>
    <string name="registered">Registrados: </string>
    <string name="register">Registro</string>
    <string name="info">Somos una aplicación dedicada a la administración de invitados
    para todo evento privado. \n \n \nContacto: support@zvent.com</string>
    <string name="guests_registered">Invitado (%1$d/%2$d)</string>
    <string name="share">Compartir</string>
    <string name="successful_share">De %1$d invitados, %2$d fueron registrados.</string>
    <string name="name">Zvent Organizing App</string>
    <string name="zvent_email">support@zvent.com</string>
    <string name="roles">Roles</string>
    <string name="save">guardar</string>
    <string name="guests">Invitados</string>
    <string name="description">Descripción</string>
    <string name="role">Rol</string>
    <string name="noGuests">¡No hay invitados registados! Presione + para añadirlos.</string>
    <string name="noGuestsRegistered">¡No hay invitados registrados! Presione + para agregarlos</string>
    <string name="noRoles">¡No hay roles registrados! Presione + para agregarlos</string>
    <string name="guestName">Nombre</string>
    <string name="guestPhone">Teléfono</string>
    <string name="guestEmail">Correo electrónico</string>
    <string name="addGuestList">Presione los atributos para agregar la información</string>
    <string name="addSeekBar">Deslice la barra para añadir un orden</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Borrar</string>
    <string name="role_icon_text">%d</string>
    <string name="iconId">Índice del ícono</string>
</resources>
