<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.zvent.add_role.AddRoleFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.zvent.add_role.AddRoleViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/guest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/role"
                android:inputType="textPersonName"
                android:text="@={viewModel.type}"
                android:textColor="@color/bodyText"
                android:textColorHint="@color/bodyText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.247" />

            <SeekBar
                android:id="@+id/seekBar2"
                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:max="9"
                android:progress="0"
                android:progressDrawable="@color/textColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guest_text" />

            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:text="@={viewModel.description}"
                android:textColor="@color/bodyText"
                android:textColorHint="@color/bodyText"
                app:layout_constraintBottom_toTopOf="@+id/seekBar2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guest_text"
                app:layout_constraintVertical_bias="0.245" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@={viewModel.weight}"
                android:textAppearance="@style/subtitleStyle"
                app:layout_constraintBottom_toTopOf="@+id/seekBar2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addGuestList"
                android:textAlignment="center"
                android:textAppearance="@style/subtitleStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.088" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/addSeekBar"
                android:textAlignment="center"
                android:textAppearance="@style/subtitleStyle"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar2"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/iconId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/iconId"
                android:inputType="number"
                android:textColor="@color/bodyText"
                android:textColorHint="@color/bodyText"
                app:layout_constraintBottom_toTopOf="@+id/progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
